--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
-    <title>React App</title>
+    <title>Tugas Akhir Pemograman Web Mobile - 205411102 (Dayat Fadila)</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
